force-app/main/default/objects/Unit__c/fields/Asking_Rent_PSF__c.field-meta.xml
<CustomField>
    <fullName>Asking_Rent_PSF__c</fullName>
    <label>Asking Rent PSF</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>