force-app/main/default/objects/Unit__c/fields/Current_Rent_PSF__c.field-meta.xml
<CustomField>
    <fullName>Current_Rent_PSF__c</fullName>
    <label>Current Rent PSF</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>