force-app/main/default/objects/Unit__c/fields/Estimated_NNN_PSF__c.field-meta.xml
<CustomField>
    <fullName>Estimated_NNN_PSF__c</fullName>
    <label>Estimated NNN PSF</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>