force-app/main/default/objects/Unit__c/fields/Lease_Start__c.field-meta.xml
<CustomField>
    <fullName>Lease_Start__c</fullName>
    <label>Lease Start</label>
    <type>Date</type>
</CustomField>