force-app/main/default/objects/Unit__c/fields/NNN_Insurance__c.field-meta.xml
<CustomField>
    <fullName>NNN_Insurance__c</fullName>
    <label>NNN Insurance (Monthly)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>