force-app/main/default/objects/Unit__c/fields/NNN_Monthly_Total__c.field-meta.xml
<CustomField>
    <fullName>NNN_Monthly_Total__c</fullName>
    <label>NNN Monthly Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>