force-app/main/default/objects/Unit__c/fields/NNN_Property_Tax__c.field-meta.xml
<CustomField>
    <fullName>NNN_Property_Tax__c</fullName>
    <label>NNN Property Tax (Monthly)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>