force-app/main/default/objects/Unit__c/fields/NNN_PSF__c.field-meta.xml
<CustomField>
    <fullName>NNN_PSF__c</fullName>
    <label>NNN PSF</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>