force-app/main/default/objects/Unit__c/fields/Occupied_Pct__c.field-meta.xml
<CustomField>
    <fullName>Occupied_Pct__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;Occupied&apos;), 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupied Pct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>