force-app/main/default/objects/Unit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Occupied</fullName><default>false</default><label>Occupied</label></value>
            <value><fullName>Vacant</fullName><default>true</default><label>Vacant</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>