force-app/main/default/objects/Unit__c/fields/Suite_Number__c.field-meta.xml
<CustomField>
    <fullName>Suite_Number__c</fullName>
    <label>Suite Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>