force-app/main/default/objects/Unit__c/fields/Yardi_Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Unit_Id__c</fullName>
    <externalId>true</externalId>
    <label>Yardi Unit Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>